flux/apps/staging/podinfo/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: podinfo
spec:
  gatewayClassName: contour
  listeners:
  - name: https
    protocol: HTTPS
    port: 8443
    hostname: podinfo.mircogericke.com
