flux/apps/staging/podinfo/proxy.yaml

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: podinfo
  namespace: default
spec:
  virtualhost:
    fqdn: podinfo.mircogericke.com
    tls:
      secretName: certificate-podinfo
  routes:
    - conditions:
      - prefix: /
      services:
        - name: podinfo
          port: 9898
