flux/apps/staging/podinfo/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  rules:
  - backendRefs:
    - group: networking.k8s.io
      kind: Service
      name: podinfo
      weight: 1
